[gd_scene load_steps=6 format=3 uid="uid://d3roe3tmg4g5o"]

[ext_resource type="Script" path="res://scripts/level_complete.gd" id="1_k50rm"]
[ext_resource type="FontFile" uid="uid://bhb13frq7x54n" path="res://assets/fonts/EuropeanTeletext.ttf" id="2_i0cbj"]
[ext_resource type="PackedScene" uid="uid://cj7002sqxufld" path="res://scenes/objective_checkbox.tscn" id="2_ktckl"]
[ext_resource type="Theme" uid="uid://b0vo6jf1kqs44" path="res://button_font.tres" id="4_5vwl0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ifp5"]
bg_color = Color(0.0745098, 0.529412, 0, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.129412, 0.392157, 0.0980392, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="LevelComplete" type="CanvasLayer"]
script = ExtResource("1_k50rm")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7ifp5")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
custom_minimum_size = Vector2(678, 360)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 36
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_i0cbj")
theme_override_font_sizes/font_size = 72
text = "Level Clear"

[node name="Objectives" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BeatObjective" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Objectives" instance=ExtResource("2_ktckl")]
layout_mode = 2
objective = "Beat the level normally"

[node name="ParObjective" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Objectives" instance=ExtResource("2_ktckl")]
layout_mode = 2
objective = "Beat the level in X moves or less"

[node name="BonusObjective" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Objectives" instance=ExtResource("2_ktckl")]
layout_mode = 2
objective = "Collect the bonus packet"

[node name="DoneButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(216, 54)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_5vwl0")
text = "Done"

[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/DoneButton" to="." method="_to_level_select"]
